trabajo sin css

--- a/index.html
+++ b/index.html
@@ -64,35 +64,50 @@
 
             </div>
 
-<label for="">
-    <span>¿tu vuelas ?</span>
-    <select name=" tu v" id="">
-        <option value="si">si</option>
-        <option value="no">no</option>
-    </select>
+            <label for="">
+                <span>¿tu vuelas ?</span>
+                <select name=" tu v" id="">
+                    <option value="si">si</option>
+                    <option value="no">no</option>
+                </select>
 
 
-</label>
-<div class="form__group">
-    <span>CIUDAD</span>
-    <input list="ciudades" />
-    <datalist id="ciudades">
-        <option value="ibague"></option>
-        <option value="bogota"></option>
-        <option value="manizales"></option>
-        <option value="medellin"></option>
-    </datalist>
+            </label>
+            <div class="form__group">
+                <span>CIUDAD</span>
+                <input list="ciudades" />
+                <datalist id="ciudades">
+                    <option value="ibague"></option>
+                    <option value="bogota"></option>
+                    <option value="manizales"></option>
+                    <option value="medellin"></option>
+                </datalist>
 
-</div>
+            </div>
             <input type="submit" />
             <p>vamonos a marte </p>
+
+            <figure>
+
+
+
+                <img src="osito.jpg" alt="logo">
+                <figcaption>este es el logo</figcaption>
+
+            </figure>
+            <video>
+            <iframe width=" 560" height="315" src="https://www.youtube.com/embed/2f22Nj2QGHQ"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </video>
     </main>
-<ul>
-    <li><a href="">090909</a></li>
-    <li><a href="">ooooooo</a></li>
-    <li><a href="">ooooooyyy</a></li>
-    <li><a href="">ooooo</a></li>
-</ul>
+    <ul>
+        <li><a href="">090909</a></li>
+        <li><a href="">ooooooo</a></li>
+        <li><a href="">ooooooyyy</a></li>
+        <li><a href="">ooooo</a></li>
+    </ul>
 
 
 </body>
